# numbers-deeplearning

./: .dockerignore  Dockerfile.api  Dockerfile.app  README.md  docker-compose.yml  package-lock.json  pyproject.toml  train.py
api/: _tensorflow.ipynb  digit_recognizer.h5  functions.py  main.py  model.npz  requirements.txt  submission.csv  test.py  test_cnn.py
api/cnn/: _tensorflow.ipynb
api/nn/: model.npz  test.py  train.py
app/: package-lock.json  package.json
app/src/app/: layout.tsx  page.tsx
convolution/: file.ipynb
non-convolution/: functions.py  test.py
numbers_deeplearning/: _numpy_model.ipynb  functions.py  model.npz  train.py
